refactor(wish): remove unused relations for feed
